--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
+    "cheerio": "^1.0.0-rc.3",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-sanity": "^1.149.0",
     "gh-pages-deploy": "^0.5.1",
