--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "docs": "node scripts/generateReadme.js"
   },
   "devDependencies": {
+    "@rexxars/gh-pages-deploy": "^0.5.2",
     "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "cheerio": "^1.0.0-rc.3",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-sanity": "^1.150.1",
-    "gh-pages-deploy": "^0.5.1",
     "outdent": "^0.7.1",
     "prettier": "^2.1.2",
     "tsdx": "^0.13.3",
@@ -88,6 +88,7 @@
   },
   "gh-pages-deploy": {
     "staticpath": "docs",
-    "noprompt": true
+    "noprompt": true,
+    "mainBranch": "main"
   }
 }
