--- a/package.json
+++ b/package.json
@@ -2,41 +2,52 @@
   "name": "@sanity/asset-utils",
   "version": "1.3.2",
   "author": "Sanity.io <hello@sanity.io>",
-  "module": "dist/asset-utils.esm.js",
   "license": "MIT",
+  "type": "module",
   "sideEffects": false,
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "source": "./src/index.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "src"
   ],
   "engines": {
-    "node": ">=10"
+    "node": ">=18"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test",
-    "lint": "tsdx lint src",
-    "posttest": "npm run lint",
-    "prepublishOnly": "tsdx build && npm test",
-    "coverage": "tsdx test --coverage",
-    "docs": "node scripts/generateReadme.js"
+    "build": "npm run clean && npm run pkg:build && npm run pkg:check",
+    "clean": "rimraf dist",
+    "pkg:build": "pkg build --strict",
+    "pkg:check": "pkg check --strict",
+    "prepublishOnly": "pnpm build",
+    "docs": "node scripts/generateReadme.js",
+    "test": "vitest"
   },
+  "browserslist": "extends @sanity/browserslist-config",
   "devDependencies": {
-    "@types/jest": "^25.2.3",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@sanity/pkg-utils": "^6.11.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "cheerio": "^1.0.0-rc.12",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-config-sanity": "^1.150.8",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-sanity": "^7.1.2",
     "outdent": "^0.8.0",
-    "prettier": "^2.8.8",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.6.2",
-    "typedoc": "^0.25.4",
-    "typescript": "^4.9.5"
+    "prettier": "^3.3.3",
+    "rimraf": "^5.0.10",
+    "typedoc": "^0.26.7",
+    "typescript": "^5.5.4",
+    "vitest": "^2.1.1"
   },
   "repository": {
     "type": "git",
@@ -75,12 +86,5 @@
       "@typescript-eslint",
       "prettier"
     ]
-  },
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "diagnostics": false
-      }
-    }
   }
 }
