chore: upgrade dependencies, run prettier

--- a/package.json
+++ b/package.json
@@ -30,21 +30,23 @@
     "pkg:build": "pkg build --strict",
     "pkg:check": "pkg check --strict",
     "prepublishOnly": "pnpm build",
-    "docs": "node scripts/generateReadme.js",
+    "docs": "tsx scripts/generateReadme.ts",
     "test": "vitest"
   },
   "browserslist": "extends @sanity/browserslist-config",
   "devDependencies": {
     "@sanity/pkg-utils": "^6.11.2",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "cheerio": "^1.0.0-rc.12",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "cheerio": "^1.0.0",
     "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-config-sanity": "^7.1.2",
+    "eslint-plugin-prettier": "^5.2.1",
     "outdent": "^0.8.0",
     "prettier": "^3.3.3",
     "rimraf": "^5.0.10",
+    "tsx": "^4.19.1",
     "typedoc": "^0.26.7",
     "typescript": "^5.5.4",
     "vitest": "^2.1.1"
