ci: use ecospark for releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,29 +5,58 @@ on:
     branches:
       - main
   workflow_dispatch:
+    inputs:
+      publish:
+        description: Publish to NPM
+        required: true
+        default: false
+        type: boolean
+
+permissions:
+  contents: read
 
 jobs:
   release:
     name: Release
+    permissions:
+      id-token: write # to enable use of OIDC for npm provenance
+      # permissions for pushing commits and opening PRs are handled by the `generate-token` step
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.ECOSPARK_APP_ID }}
+          private-key: ${{ secrets.ECOSPARK_APP_PRIVATE_KEY }}
+      # This action will create a release PR when regular conventional commits are pushed to main, it'll also detect if a release PR is merged and npm publish should happen
+      - uses: google-github-actions/release-please-action@v4
+        id: release
+        with:
+          release-type: node
+          token: ${{ steps.app-token.outputs.token }}
+      # Publish to NPM on new releases
+      - uses: actions/checkout@v4
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
+      - uses: pnpm/action-setup@v2
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
+      - uses: actions/setup-node@v4
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
         with:
           cache: pnpm
           node-version: lts/*
-      - name: Install dependencies
-        run: pnpm install
-      - name: Build
-        run: pnpm build
-      - name: Release
+          registry-url: 'https://registry.npmjs.org'
+      - run: corepack enable && pnpm --version && pnpm install
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
+      - name: Set publishing config
+        run: pnpm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
+          NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH_TOKEN}}
+      # Release Please has already incremented versions and published tags, so we just
+      # need to publish the new version to npm here
+      - run: pnpm publish
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
+        env:
+          NPM_CONFIG_PROVENANCE: true
       - name: Update docs
         run: tsx scripts/generateReadme.ts --commit && git push
