fix: prevent readme template from being published

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "build": "npm run clean && npm run pkg:build && npm run pkg:check",
+    "prepare": "npm run clean && npm run pkg:build && npm run pkg:check",
     "clean": "rimraf dist docs",
     "pkg:build": "pkg build --strict",
     "pkg:check": "pkg check --strict",
