fix: include latest, generated readme in published module

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,6 @@ on:
         type: boolean
 
 permissions:
-  contents: read
   id-token: write # to enable use of OIDC for npm provenance
 
 jobs:
@@ -29,6 +28,15 @@ jobs:
         with:
           app-id: ${{ secrets.ECOSPARK_APP_ID }}
           private-key: ${{ secrets.ECOSPARK_APP_PRIVATE_KEY }}
+      - name: Get GitHub App User ID
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+      # Configure git for pushing back changes
+      - run: |
+          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
+          git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>'
       # This action will create a release PR when regular conventional commits are pushed to main, it'll also detect if a release PR is merged and npm publish should happen
       - uses: googleapis/release-please-action@v4
         id: release
@@ -38,6 +46,8 @@ jobs:
       # Publish to NPM on new releases
       - uses: actions/checkout@v4
         if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
+        with:
+          token: ${{ steps.app-token.outputs.token }}
       - uses: pnpm/action-setup@v2
         if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
       - uses: actions/setup-node@v4
@@ -48,6 +58,10 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: corepack enable && pnpm --version && pnpm install
         if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
+      # Update docs with any changes, and do so pre-publish to ensure we include it in the tarball
+      - name: Update readme documentation
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
+        run: npx tsx scripts/generateReadme.ts --commit --tag ${{steps.release.outputs.tag_name}} && git push
       - name: Set publishing config
         run: pnpm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
         if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
@@ -59,12 +73,6 @@ jobs:
         if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
         env:
           NPM_CONFIG_PROVENANCE: true
-      - name: Update readme documentation
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          npx tsx scripts/generateReadme.ts --commit --tag ${{steps.release.outputs.tag_name}} && git push
       - name: Update GitHub pages documentation
         uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e # v4
         if: ${{ github.ref == 'refs/heads/main' && (steps.release.outputs.release_created || github.event.inputs.publish == 'true') }}
