--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
       # Update docs with any changes, and do so pre-publish to ensure we include it in the tarball
       - name: Update readme documentation
         if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
-        run: npx tsx scripts/generateReadme.ts --commit --tag ${{steps.release.outputs.tag_name}} && git push
+        run: npx tsx scripts/generateDocs.ts --commit --tag ${{steps.release.outputs.tag_name}} && git push
       - name: Set publishing config
         run: pnpm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
         if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
@@ -73,6 +73,10 @@ jobs:
         if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
         env:
           NPM_CONFIG_PROVENANCE: true
+      # Publish steps cleans up docs pre-publish, so re-generate them
+      - name: Update readme documentation
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.publish == 'true' }}
+        run: npx tsx scripts/generateDocs.ts
       - name: Update GitHub pages documentation
         uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e # v4
         if: ${{ github.ref == 'refs/heads/main' && (steps.release.outputs.release_created || github.event.inputs.publish == 'true') }}
